[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/dialog_plugin/Editor/Views/timeline_editor/text editor/text_editor.gd" type="Script" id=1]
[ext_resource path="res://addons/dialog_plugin/Editor/Views/timeline_editor/text editor/TextEdit.gd" type="Script" id=2]

[node name="Text editor" type="ConfirmationDialog"]
visible = true
margin_right = 732.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Title"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 724.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 716.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Bold" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_right = 41.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Bold"

[node name="Italic" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 45.0
margin_right = 89.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Italic"

[node name="Underscore" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 93.0
margin_right = 179.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Underscore"

[node name="Rainbow" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 183.0
margin_right = 248.0
margin_bottom = 20.0
text = "Rainbow"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 716.0
margin_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
wrap_enabled = true
script = ExtResource( 2 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 134.0
margin_right = 716.0
margin_bottom = 154.0
alignment = 1

[node name="Save" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 157.0
margin_right = 198.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 6
enabled_focus_mode = 0
text = "Save"

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer3"]
margin_left = 514.0
margin_right = 561.0
margin_bottom = 20.0
focus_mode = 0
size_flags_horizontal = 6
enabled_focus_mode = 0
text = "Close"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -358.0
margin_top = -81.0
margin_right = 358.0
margin_bottom = 73.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="AcceptDialog"]
margin_right = 40.0
margin_bottom = 14.0
text = "There are unsaved changes, are you sure you want to close the editor?"
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Bold" to="VBoxContainer/TextEdit" method="_on_Bold_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Italic" to="VBoxContainer/TextEdit" method="_on_Italic_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Underscore" to="VBoxContainer/TextEdit" method="_on_Underscore_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Rainbow" to="VBoxContainer/TextEdit" method="_on_Rainbow_pressed"]
[connection signal="text_changed" from="VBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer3/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="custom_action" from="AcceptDialog" to="." method="_on_AcceptDialog_custom_action"]
